spade-tests/src/snapshots/spade_tests__typeinference__impl_of_missing_trait_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test<T: Trait>(x: T) {}


error: Use of undeclared name Trait
  ┌─ testinput:1:12
  │
1 │ fn test<T: Trait>(x: T) {}
  │            ^^^^^ Undeclared name


