spade-tests/src/snapshots/spade_tests__typeinference__impl_of_non_trait_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}
fn test<T: A>(x: T) {}


error: Expected A to be a trait
  ┌─ testinput:2:12
  │
1 │ struct A {}
  │ ----------- A is a struct
2 │ fn test<T: A>(x: T) {}
  │            ^ Expected a trait


