spade-tests/src/snapshots/spade_tests__typeinference__inverse_order_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[2:0]
}


error: Start index must be before end index
  ┌─ testinput:2:7
  │
2 │     x[2:0]
  │       ^^^ Start index after end


